# ubu-planning-kernel

./: .gitignore  CHANGELOG.md  CODEGEN.md  CONTRACT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  codegen-task.yml  contract-change.yml  design-sync.yml
.github/workflows/: ci.yml
crates/ubu-planning-advisory-protocol/: Cargo.toml
crates/ubu-planning-advisory-protocol/src/: lib.rs  noop.rs  process.rs
crates/ubu-planning-cli/: Cargo.toml
crates/ubu-planning-cli/src/: main.rs
crates/ubu-planning-cli/src/commands/: advisory.rs  mod.rs  plan.rs  repair.rs  validate.rs
crates/ubu-planning-core/: Cargo.toml
crates/ubu-planning-core/src/: diagnostics.rs  explanations.rs  graph.rs  legitimization.rs  lib.rs  request.rs  response.rs  rollout.rs  scoring.rs  strategy.rs  validation.rs
crates/ubu-planning-core/tests/: advisory_noop.rs  affect_golden_fixtures.rs  deterministic_seed.rs  end_to_end_plan.rs  golden_fixtures.rs  legitimization.rs  phase_a.rs  phase_c1.rs  rollout_golden_fixtures.rs  scoring_selection_golden_fixtures.rs  skeleton_failure.rs
crates/ubu-planning-cpu/: Cargo.toml
crates/ubu-planning-cpu/src/: candidate_generation.rs  default_selection.rs  lib.rs  repair.rs  skeleton.rs
fixtures/advisory/: noop-request.json  noop-response.json
fixtures/planning/golden/: README.md  affect-legitimization.json  rollout-c2.json  rollout-degraded-c2.json  scoring-selection-c1.json  skeleton-phase-a.json
fixtures/planning/invalid/: cyclic-dependency.json  impossible-window.json  missing-dependency.json  missing-schema-version.json  stale-affect.json  unknown-schema-version.json
fixtures/planning/valid/: affect-break-required.json  dependency-chain.json  simple-success.json  static-anchor.json
gpu-advisory/: README.md  pyproject.toml
gpu-advisory/src/ubu_gpu_advisory/: __init__.py  main.py  noop.py  protocol.py
gpu-advisory/tests/: test_noop_protocol.py
tests/: advisory_noop.rs  deterministic_seed.rs  end_to_end_plan.rs  legitimization.rs  skeleton_failure.rs  status_vocabulary.rs
