[workspace]
resolver = "2"
members = [
    "crates/ubu-planning-core",
    "crates/ubu-planning-cpu",
    "crates/ubu-planning-advisory-protocol",
    "crates/ubu-planning-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/UbU-project/ubu-planning-kernel"
publish = false

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
ubu_core = { git = "https://github.com/UbU-project/ubu-core", rev = "139ce98a2dce40f8e73f472344d5cc4a8eb59db1" }
ubu_planning_core = { path = "crates/ubu-planning-core" }
ubu_planning_cpu = { path = "crates/ubu-planning-cpu" }
