[package]
name = "ubu_planning_cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
ubu_planning_core.workspace = true
ubu_planning_cpu.workspace = true

[[bin]]
name = "ubu-planning"
path = "src/main.rs"
